# tde-nrf52-bleadv

./: CMakeLists.txt  README.md
ld/: target.ld
src/: adv_ble.c  adv_ble.h  adv_errors.h  adv_main.c  adv_tools.h  adv_trace.c  adv_trace.h  adv_tracesrcs.h
